--- a/resume-cv/berg/HTML_Template/contact-4-with-additional-optional-elements.html
+++ b/resume-cv/berg/HTML_Template/contact-4-with-additional-optional-elements.html
@@ -18,6 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
     
     <!-- Bootstrap Core CSS -->
+    sdfsdfsdfdfdggggggggggggggggggggggggggggggggggggg
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!--<div></div>-->
     <!-- Font icons CSS -->
