--- a/resume-cv/berg/HTML_Template/index.html
+++ b/resume-cv/berg/HTML_Template/index.html
@@ -22,7 +22,8 @@
     <!--<div></div>-->
     <!-- Font icons CSS -->
     <link href="assets/plugins/icons-mind/style.css" rel="stylesheet" type="text/css">
-    <link href="assets/plugins/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!--<link href="assets/plugins/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
     <!-- Plugins CSS -->
     <link href="assets/plugins/jpreloader/css/jpreloader.css" rel="stylesheet" type="text/css">
